# django-2fa

./: LICENSE  README.md  pyproject.toml
django_2fa/: admin.py  apps.py  decorators.py  forms.py  middleware.py  models.py  settings.py  urls.py  views.py  views_api.py
django_2fa/migrations/: 0001_initial.py  0002_alter_device_unique_together.py  0003_device_setup_complete.py  0004_device_counter_expire.py  0005_mfarequest.py  0006_mfarequest_used.py
django_2fa/templates/2fa/: add-device.html  base.html  complete-fido.html  devices.html  email-code.html  email-code.txt  login.html  request-completed.html  verify-fido.html  verify.html
docs/: api.md  config.md  external-apps.md  protecting-views.md
