[project]
name = "django-2fa"
description = "2 Factor authenication application for Django"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "django-fernet-encrypted-fields~=0.0",
    "pyotp~=2.6",
    "fido2~=0.9",
    "haikunator>=2.1.0",
    "pyjwt>=2.3.0",
]
requires-python = ">=3.7"
dynamic = ["version"]
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/neutron-sync/django-2fa"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
version = {from = "django_2fa/__init__.py"}
[tool.pdm.scripts]
publish = "pdm publish --username pizzapanther"
